# BTC-SUBSTREAM

./: .gitignore  Cargo.toml  Makefile  buf.gen.yaml  package-lock.json  package.json  rust-toolchain.toml  schema.graphql  subgraph.yaml  substreams.yaml
proto/: bitcoin.template.proto
src/: lib.rs
src/pb/: bitcoin.template.rs  mod.rs
subgraph/: schema.graphql  subgraph.yaml
subgraph/src/: mapping.ts
subgraph/src/pb/bitcoin/template/: Address.ts  Transaction.ts  Txo.ts
